Started to make one Activity with new Layout

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,17 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">Sharing UseCases</string>
+    <string name="sharing_activity">Sharing UseCases</string>
+    <string name="description">Select Display and ...</string>
+    <string name="start_mirror">Start Mirroring</string>
+    <string name="stop_mirror">Stop Mirroring</string>
+    <string name="serve">Start Serving</string>
+    <string name="recommend">Give Recommendation</string>
+    <string name="touchable">open for input</string>
+    <string name="untouchable">input locked</string>
+    <string name="cid">Central\nDisplay</string>
+    <string name="padi">Passenger\nDisplay</string>
     <string name="app_title" translatable="false">Kitchen Sink</string>
     <string name="toast_item_pinned_message" translatable="false">%s pinned.</string>
     <string name="toast_item_unpinned_message" translatable="false">%s unpinned.</string>
